update: refactor the operation button into template in blackboard page

--- a/static/css/FFTechStyle/UI/ff_global.css
+++ b/static/css/FFTechStyle/UI/ff_global.css
@@ -1,6 +1,7 @@
-body {
+#main body {
     background-color: #f9f9f9;
-    line-height: none;
+    line-height: 1.425;
+    /* line-height: none; */
 }
 
 tr {
