--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -29,8 +29,10 @@
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueDetail.css">
     <link rel="stylesheet" href="/static/css/FFTechStyle/issueLevel.css">
     <script type="text/javascript" src="/static/js/avatar/avatar.js"></script>
-    <script type="text/javascript" src="/static/js/features/issueNew.js"></script>
     <script type="text/javascript" src="/static/js/features/issueDetail.js"></script>
+
+    <script type="text/javascript" src="/static/js/common/utils.js"></script>
+    <script type="text/javascript" src="/static/js/common/dataPickerTemplate.js"></script>
 
 </head>
 
