wip: new version feature in blackboard

--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -64,7 +64,7 @@
     <!-- modal popup for  -->
     {{template "bbNewInitiativeTemplate" .modelPropertySection}}
     {{template "bbNewIssueTemplate" .issueHTMLValue}}
-    {{template "bbNewMilestoneTemplate" .}}
+    {{template "bbNewMilestoneTemplate" .newVersionField}}
 
 </body>
 
