wip: blackboard page

--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -55,7 +55,7 @@
         </div>
 
         <!-- issue list -->
-        <div class="card span span_full">
+        <div id="issue-table" class="card span span_full">
             {{template "dataIssueTableTemplate" .}}
         </div>
 
