--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -40,14 +40,12 @@
             </div>
 
             <div class="span span_4of6 clearfix">
-                {{range $eachFilter := .allFilters}}
-
+                {{- range $eachFilter := .allFilters}}
                 <div style="float:left;width:90%;">{{template "dataPickerTemplate" $eachFilter}}</div>
                 <div style="float:left; margin: 4px 0px 4px auto; width: 40px; height: 40px; line-height: 1.425;">
                     {{template "modalPopupTemplate" $eachFilter}}
                 </div>
-
-                {{end}}
+                {{- end}}
             </div>
         </div>
 
