Revert "update: remove container style"
This reverts commit da00a61c28271d036ac8394c118d715e1d730229.

--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -22,7 +22,9 @@
 <body>
 
     <div class="navbar navbar-default">
-        {{template "navbar" .}}
+        <div class="container">
+            {{template "navbar" .}}
+        </div>
     </div>
 
     <div class="container">
@@ -54,7 +56,7 @@
 
         <!-- issue list -->
         <div id="issue-table" class="card span span_full">
-
+            
             {{template "dataIssueTableTemplate" .}}
         </div>
 
