--- a/views/issueDetail.html
+++ b/views/issueDetail.html
@@ -39,7 +39,9 @@
 <body>
 
     <div class="navbar navbar-default">
-        {{template "navbar" .}}
+        <div class="container">
+            {{template "navbar" .}}
+        </div>
     </div>
 
     {{$issue := .issueData}}
