--- a/views/account.html
+++ b/views/account.html
@@ -9,21 +9,25 @@
 <body>
 
     <div class="navbar navbar-default">
-        {{template "navbar" .}}
+        <div class="container">
+            {{template "navbar" .}}
+        </div>
     </div>
 
     {{$account := .AccountData}}
 
-    <div class="row">
-        <div class="col-xs-2">
-            <ul class="nav nav-tabs nav-stacked">
-                <li><a href="#"><i class="glyphicon glyphicon-user"></i> Profile </a></li>
-                <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Preferences </a></li>
-            </ul>
-        </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-2">
+                <ul class="nav nav-tabs nav-stacked">
+                    <li><a href="#"><i class="glyphicon glyphicon-user"></i> Profile </a></li>
+                    <li><a href="#"><i class="glyphicon glyphicon-cog"></i> Preferences </a></li>
+                </ul>
+            </div>
 
-        <div class="col-xs-9">
-            Welcome {{$account.Name}}
+            <div class="col-xs-9">
+                Welcome {{$account.Name}}
+            </div>
         </div>
     </div>
 
