--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,9 @@
 <body>
 
     <div class="navbar navbar-default">
-        {{template "navbar" .}}
+        <div class="container">
+            {{template "navbar" .}}
+        </div>
     </div>
 
 
