--- a/views/login.html
+++ b/views/login.html
@@ -7,7 +7,9 @@
 <body>
 
     <div class="navbar navbar-default">
-        {{template "navbar" .}}
+        <div class="container">
+            {{template "navbar" .}}
+        </div>
     </div>
 
     <div class="container" style="width:30em">
