--- a/views/account.html
+++ b/views/account.html
@@ -9,14 +9,14 @@
 <body>
 
     <div class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             {{template "navbar" .}}
         </div>
     </div>
 
     {{$account := .AccountData}}
 
-    <div class="container">
+    <div class="container-fluid">
         <div class="row">
             <div class="col-xs-2">
                 <ul class="nav nav-tabs nav-stacked">
