--- a/views/blackboardController.html
+++ b/views/blackboardController.html
@@ -22,12 +22,12 @@
 <body>
 
     <div class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             {{template "navbar" .}}
         </div>
     </div>
 
-    <div class="container">
+    <div class="container-fluid">
         <div>
             <h1>Hi {{.ProjectTitle}} <small> world</small></h1>
         </div>
