--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
 <body>
 
     <div class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             {{template "navbar" .}}
         </div>
     </div>
