--- a/views/register.html
+++ b/views/register.html
@@ -7,12 +7,12 @@
 <body>
 
     <div class="navbar navbar-default">
-        <div class="container">
+        <div class="container-fluid">
             {{template "navbar" .}}
         </div>
     </div>
 
-    <div class="container" style="width:30em">
+    <div class="container-fluid" style="width:30em">
         <form id="frmRegister" method="POST" action="#" onsubmit="return false">
             <div class="form-group">
                 <label>Account: *</label>
